--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<title></title>
 </head>
 <body>
-  <h1 style="position: relative; text-align: center;"> Твоя мама умерла </h1>
-   <h2 style="position: relative; text-align: center;"> Шучу </h2>
-  <h3 style="position: relative; text-align: center;"> Или нет... </h3>
-  <img style="position: relative; left: 38%;" src="img/img1.png">
+  <h1 style="position: relative; text-align: center;"> эта че </h1>
+   <h2 style="position: relative; text-align: center;"> дз</h2>
+  <h3 style="position: relative; text-align: center;"> по оператору эвм??? </h3>
+  <img style="position: relative; left: 38%;" src="img/img1.sfw">
 </body>
 </html>>
