--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
    <h2 style="position: relative; text-align: center;"> дз</h2>
   <h3 style="position: relative; text-align: center;"> по оператору эвм??? </h3>
   <img style="position: relative; left: 38%;" src="img/img1.sfw">
-	<a href="" onmouseover="onMouseOver()" onmouseout="onMouseOut()"><img src="img/img1.sfw" id="rollout" alt="" /></a>
+	<a href="https://vk.com/hungryaye" onmouseover="onMouseOver(this.src='img/img.sfw')" onmouseout="onMouseOut(this.src='img/img.sfw')"><img src="img/img1.sfw" id="rollout" alt="мяу" /></a>
 </body>
 </html>>
