--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<style>
+   a.rollover {
+    background: url(img/img1.sfw); /* Путь к файлу с исходным  рисунком */
+    display: block; /* Рисунок как блочный элемент */
+    width: 151px; /* Ширина рисунка в пикселах */
+    height: 40px; /* Высота рисунка */
+   }
+   a.rollover:hover {
+    background-position: 0 -40px; /* Смещение фона */
+   }
+  </style>
+	<title>мяу</title>
 </head>
 <body>
+	<p><a href="https://vk.com/hungryaye" class="rollover"></a></p>
   <h1 style="position: relative; text-align: center;"> эта че </h1>
    <h2 style="position: relative; text-align: center;"> дз</h2>
   <h3 style="position: relative; text-align: center;"> по оператору эвм??? </h3>
