--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<style>
    a.rollover {
-    background: url(img/img1.sfw); /* Путь к файлу с исходным  рисунком */
+    background: url(img/img1.gif); /* Путь к файлу с исходным  рисунком */
     display: block; /* Рисунок как блочный элемент */
     width: 151px; /* Ширина рисунка в пикселах */
     height: 40px; /* Высота рисунка */
@@ -19,6 +19,6 @@
   <h1 style="position: relative; text-align: center;"> эта че </h1>
    <h2 style="position: relative; text-align: center;"> дз</h2>
   <h3 style="position: relative; text-align: center;"> по оператору эвм??? </h3>
-<a href="https://vk.com/hungryaye" onmouseover="onMouseOver(this.src='img/img.sfw')" onmouseout="onMouseOut(this.src='img/img.sfw')"><img src="img/img1.sfw" id="rollout" alt="мяу" /></a>
+<a href="https://vk.com/hungryaye" onmouseover="onMouseOver(this.src='img/img.gif')" onmouseout="onMouseOut(this.src='img/img.gif')"><img src="img/img1.gif" id="rollout" alt="мяу" /></a>
 </body>
 </html>>
